commit edit registro de pelicula

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "PruebaJr",
+  "name": "backend-prueba",
   "version": "1.0.0",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
-    
+    "express": "^4.17.1",
+    "mongoose": "^6.0.12"
   }
 }
